# plugin-demo

./: meson.build  pd-main.c  pd-plugin-job.c  pd-plugin-job.h  pd-plugin-loader.c  pd-plugin-loader.h  pd-plugin.c  pd-plugin.h
plugins/: meson.build
plugins/hello-world/: meson.build  plugin-hello-world.c
